force-app/main/default/objects/Asset/fields/AcceptPromotion__c.field-meta.xml
<CustomField>
    <fullName>AcceptPromotion__c</fullName>
    <label>Aceita receber comunicados Vivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <label>Sim</label>
            </value>
            <value>
                <fullName>No</fullName>
                <label>Não</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>