force-app/main/default/objects/Asset/fields/ActivationDateESIM__c.field-meta.xml
<CustomField>
    <fullName>ActivationDateESIM__c</fullName>
    <description>Data de Ativação do Chip.</description>
    <label>Data de Ativação</label>
    <type>DateTime</type>
</CustomField>