force-app/main/default/objects/Asset/fields/BillingAccountFormulaName__c.field-meta.xml
<CustomField>
    <fullName>BillingAccountFormulaName__c</fullName>
    <description>Retorna o Nome da Conta de Faturamento ao invés do ID. Utilizado no componente de seleção de linha.</description>
    <formula>vlocity_cmt__BillingAccountId__r.Name</formula>
    <label>Billing Account Formula</label>
    <type>Text</type>
</CustomField>