force-app/main/default/objects/Asset/fields/Cabinet__c.field-meta.xml
<CustomField>
    <fullName>Cabinet__c</fullName>
    <description>Armario do Asset, campo utilizado para realizar a busca de ofertas no componente de Ofertas customizado</description>
    <label>Código Armário</label>
    <length>50</length>
    <type>Text</type>
</CustomField>