force-app/main/default/objects/Asset/fields/CanCreateNote__c.field-meta.xml
<CustomField>
    <fullName>CanCreateNote__c</fullName>
    <description>Determina se o usuário logado possui permissãoi para criar notas no ativo</description>
    <formula>$Permission.AllowCreateAssetNotes</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pode Criar Nota?</label>
    <type>Checkbox</type>
</CustomField>