force-app/main/default/objects/Asset/fields/CanSeeExtract__c.field-meta.xml
<CustomField>
    <fullName>CanSeeExtract__c</fullName>
    <description>Determina se o usuário logado possui permissão para ver extratos do cliente</description>
    <formula>$Permission.ExtractDetailed</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Possui acesso a extratos ?</label>
    <type>Checkbox</type>
</CustomField>