force-app/main/default/objects/Asset/fields/EndDateTime__c.field-meta.xml
<CustomField>
    <fullName>EndDateTime__c</fullName>
    <label>Data Fim do Produto</label>
    <type>DateTime</type>
</CustomField>