force-app/main/default/objects/Asset/fields/HasBonus__c.field-meta.xml
<CustomField>
    <fullName>HasBonus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Possui Bônus</label>
    <type>Checkbox</type>
</CustomField>