force-app/main/default/objects/Asset/fields/HasBonusFormula__c.field-meta.xml
<CustomField>
    <fullName>HasBonusFormula__c</fullName>
    <formula>IF( HasBonus__c = true, 'Sim', 'Não' )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Possui bônus formula</label>
    <type>Text</type>
</CustomField>