force-app/main/default/objects/Asset/fields/HasDiscount__c.field-meta.xml
<CustomField>
    <fullName>HasDiscount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Possui Desconto</label>
    <type>Checkbox</type>
</CustomField>