force-app/main/default/objects/Asset/fields/HasDiscountFormula__c.field-meta.xml
<CustomField>
    <fullName>HasDiscountFormula__c</fullName>
    <formula>IF( HasDiscount__c = true, &apos;Sim&apos;, &apos;Não&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Possui desconto formula</label>
    <type>Text</type>
</CustomField>