force-app/main/default/objects/Asset/fields/HolderDependent__c.field-meta.xml
<CustomField>
    <fullName>HolderDependent__c</fullName>
    <formula>IF(



IsHolder__c = &apos;TIT&apos;, &apos;Sim&apos;, &apos;Não&apos;



)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Titular</label>
    <type>Text</type>
</CustomField>