force-app/main/default/objects/Asset/fields/IdBundle__c.field-meta.xml
<CustomField>
    <fullName>IdBundle__c</fullName>
    <description>Código da oferta que o produto/serviço pertence. Informação vem na subscribedproducts no bloco que contem o producttype = &quot;bundle&quot;.</description>
    <label>Código Oferta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>