force-app/main/default/objects/Asset/fields/Instance__c.field-meta.xml
<CustomField>
    <fullName>Instance__c</fullName>
    <label>Instância</label>
    <length>255</length>
    <type>Text</type>
</CustomField>