force-app/main/default/objects/Asset/fields/IsHolder__c.field-meta.xml
<CustomField>
    <fullName>IsHolder__c</fullName>
    <label>TIT_DEP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>