force-app/main/default/objects/Asset/fields/LegacyAssetId__c.field-meta.xml
<CustomField>
    <fullName>LegacyAssetId__c</fullName>
    <label>ID Produto Legado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>