force-app/main/default/objects/Asset/fields/LegacyIdentifier__c.field-meta.xml
<CustomField>
    <fullName>LegacyIdentifier__c</fullName>
    <description>Campo utilizado como referencia do pacote a ser enviado aos sistemas legados.</description>
    <externalId>true</externalId>
    <label>LegacyIdentifier</label>
    <length>18</length>
    <type>Text</type>
</CustomField>