force-app/main/default/objects/Asset/fields/LegacySystem__c.field-meta.xml
<CustomField>
    <fullName>LegacySystem__c</fullName>
    <description>Sistema legado de origem do Asset do Cliente.</description>
    <label>Sistema de Origem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATIS</fullName>
            </value>
            <value>
                <fullName>ATLYS</fullName>
            </value>
            <value>
                <fullName>NEXT</fullName>
            </value>
            <value>
                <fullName>NGIN</fullName>
            </value>
            <value>
                <fullName>NSIA</fullName>
            </value>
            <value>
                <fullName>SIA</fullName>
            </value>
            <value>
                <fullName>SIEBEL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>