force-app/main/default/objects/Asset/fields/MainProductDescription__c.field-meta.xml
<CustomField>
    <fullName>MainProductDescription__c</fullName>
    <description>Campo para informar o plano.</description>
    <label>Plano</label>
    <length>255</length>
    <type>Text</type>
</CustomField>