force-app/main/default/objects/Asset/fields/NRCAccount__c.field-meta.xml
<CustomField>
    <fullName>NRCAccount__c</fullName>
    <label>Conta/NRC</label>
    <length>20</length>
    <type>Text</type>
</CustomField>