force-app/main/default/objects/Asset/fields/OfferDescription__c.field-meta.xml
<CustomField>
    <fullName>OfferDescription__c</fullName>
    <label>Descrição da Oferta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>