force-app/main/default/objects/Asset/fields/PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumber__c</fullName>
    <label>Número Telefone</label>
    <type>Phone</type>
</CustomField>