force-app/main/default/objects/Asset/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Plataforma</label>
    <length>20</length>
    <type>Text</type>
</CustomField>