force-app/main/default/objects/Asset/fields/PortfolioType__c.field-meta.xml
<CustomField>
    <fullName>PortfolioType__c</fullName>
    <label>Tipo de Carteira</label>
    <length>20</length>
    <type>Text</type>
</CustomField>