force-app/main/default/objects/Asset/fields/PriceCurrent__c.field-meta.xml
<CustomField>
    <fullName>PriceCurrent__c</fullName>
    <label>Valor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>