force-app/main/default/objects/Asset/fields/PriceOver__c.field-meta.xml
<CustomField>
    <fullName>PriceOver__c</fullName>
    <label>Valor Excedente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>