force-app/main/default/objects/Asset/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>Tipo de Produto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>