force-app/main/default/objects/Asset/fields/SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>SourceSystem__c</fullName>
    <label>Sistema de Origem</label>
    <length>20</length>
    <type>Text</type>
</CustomField>