force-app/main/default/objects/Asset/fields/Speed__c.field-meta.xml
<CustomField>
    <fullName>Speed__c</fullName>
    <description>Velocidade do Ativo/Produto</description>
    <label>Velocidade</label>
    <length>50</length>
    <type>Text</type>
</CustomField>