force-app/main/default/objects/Asset/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Campo para guardar o valor</description>
    <label>StartDate</label>
    <type>DateTime</type>
</CustomField>