force-app/main/default/objects/Asset/fields/StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>StartDateTime__c</fullName>
    <label>Data Inicio do Produto</label>
    <type>DateTime</type>
</CustomField>