force-app/main/default/objects/Asset/fields/StatusDescription__c.field-meta.xml
<CustomField>
    <fullName>StatusDescription__c</fullName>
    <description>Campo que armazena o &quot;substatus&quot; (motivo), para complementar a informação já existente do status da linha.
O novo campo foi inserido no contrato da versão 3.10 da API Subscribed Products com o nome de &quot;status_description&quot;.</description>
    <label>Descrição do Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>