force-app/main/default/objects/Asset/fields/Streaming__c.field-meta.xml
<CustomField>
    <fullName>Streaming__c</fullName>
    <description>Lista de streamings contratados</description>
    <label>Streaming</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sem Streaming</fullName>
            </value>
            <value>
                <fullName>Amazon Prime Vídeo</fullName>
            </value>
            <value>
                <fullName>Combo Disney+</fullName>
            </value>
            <value>
                <fullName>Combo Netflix Padrão</fullName>
            </value>
            <value>
                <fullName>Combo Netflix Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>