force-app/main/default/objects/Asset/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <description>Armazena a tecnologia do registro de Ativo/Produto</description>
    <label>Tecnologia</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FTTH</fullName>
            </value>
            <value>
                <fullName>FTTC</fullName>
            </value>
            <value>
                <fullName>Movel</fullName>
                <label>Móvel</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>