force-app/main/default/objects/Asset/fields/TransactionIDBlindagem__c.field-meta.xml
<CustomField>
    <fullName>TransactionIDBlindagem__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Id do registro da Configuração de Blindagem, utilizado para extração do PWC</description>
    <label>TransactionIDBlindagem</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>