force-app/main/default/objects/Asset/fields/TVOfferFormula__c.field-meta.xml
<CustomField>
    <fullName>TVOfferFormula__c</fullName>
    <description>Campo para fazer o de/para entre o Asset e o objeto de ofertas</description>
    <formula>IF(BEGINS(MainProductDescription__c,&apos;PACOTE B&apos;), &apos;Basico HD&apos;,
IF(BEGINS(MainProductDescription__c,&apos;PACOTE FULL HD FUTEBOL&apos;), &apos;Full HD Futebol&apos;,
IF(BEGINS(MainProductDescription__c,&apos;PACOTE FULL HD&apos;), &apos;Full HD&apos;,
IF(BEGINS(MainProductDescription__c,&apos;PACOTE STANDARD&apos;), &apos;Standard HD&apos;,
IF(BEGINS(MainProductDescription__c,&apos;PACOTE SUPER HD FUTEBOL&apos;), &apos;Super HD Futebol&apos;,
IF(BEGINS(MainProductDescription__c,&apos;PACOTE SUPER HD&apos;), &apos;Super HD&apos;,
IF(BEGINS(MainProductDescription__c,&apos;PACOTE ULTIMATE HD FUTEBO&apos;), &apos;Ultimate HD Futebol&apos;,
IF(BEGINS(MainProductDescription__c,&apos;PACOTE ULTIMATE HD&apos;), &apos;Ultimate HD&apos;,
IF(BEGINS(MainProductDescription__c,&apos;PACOTE ULTRA HD FUTEBOL&apos;), &apos;Ultra HD Futebol&apos;,
IF(BEGINS(MainProductDescription__c,&apos;PACOTE ULTRA&apos;), &apos;Ultra HD&apos;,
IF(OR(BEGINS(MainProductDescription__c,&apos;VIVO PLAY PADRAO&apos;),BEGINS(MainProductDescription__c,&apos;VIVO PLAY PADRÃO&apos;)), &apos;Vivo Play Padrão&apos;,
IF(BEGINS(MainProductDescription__c,&apos;VIVO PLAY ESSENCIAL&apos;), &apos;Vivo Play Essencial&apos;,
IF(BEGINS(MainProductDescription__c,&apos;VIVO PLAY ULTRA&apos;), &apos;Vivo Play Ultra&apos;,
IF(OR(BEGINS(MainProductDescription__c,&apos;VIVO PLAY AVANCADO&apos;),BEGINS(MainProductDescription__c,&apos;VIVO PLAY AVANÇADO&apos;)), &apos;Vivo Play Avançado&apos;,
IF(BEGINS(MainProductDescription__c,&apos;VIVO PLAY COMPLETO&apos;), &apos;Vivo Play Completo&apos;,



&apos;SEM OFERTA TV&apos;)))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oferta TV</label>
    <type>Text</type>
</CustomField>