force-app/main/default/objects/Asset/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tipo</fullName>
            </value>
            <value>
                <fullName>Fixa</fullName>
            </value>
            <value>
                <fullName>Movel</fullName>
                <label>Móvel</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>