force-app/main/default/objects/Asset/recordTypes/Fixa.recordType-meta.xml
<RecordType>
    <fullName>Fixa</fullName>
    <active>true</active>
    <description>Produtos contratados do tipo fixo</description>
    <label>Fixa</label>
</RecordType>