force-app/main/default/objects/Asset/recordTypes/Movel.recordType-meta.xml
<RecordType>
    <fullName>Movel</fullName>
    <active>true</active>
    <description>Produtos contratados do tipo móvel</description>
    <label>Movel</label>
</RecordType>